--- a/informarch/zakladki_0030.html
+++ b/informarch/zakladki_0030.html
@@ -6,7 +6,6 @@
     <link type="text/css" rel="stylesheet" href="../res/css/easy.library.css" />
     <link type="text/css" rel="stylesheet" href="../res/css/offline.window.css" />
     <link type="text/css" rel="stylesheet" href="../res/css/qsp_code.css" />
-    <link type="text/css" rel="stylesheet" href="../res/css/qsp_code.css" />
     <title>QSP: ИнформАрхив</title>
 </head>
     
@@ -16,7 +15,7 @@
             <h1>ИнформАрхив QSP</h1>
             <!-- body start -->
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html" class="emHREFTT">&lt; Назад, к странице 29</a></div><div></div></div>
-<a id="лЩИj"></a><h2>Подборка ссылок на различные ресурсы, справки и статьи</h2>
+<a id="informarch_bookmarks"></a><h2>Подборка ссылок на различные ресурсы, справки и статьи</h2>
 <ul>
 <li>
 <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=164&Itemid=57" style="text-decoration:none;" class="emFOLD">Локализация классического плеера QSP v.5.7.0</a>
@@ -34,22 +33,22 @@
 <a href="https://urq.plut.info/texts" style="text-decoration:none;" class="emFOLD">Библиотека URQ</a>
 </li>
 </ul>
-<a id="аSпщ"></a><h3>Официальный сайт QSP</h3>
+<a id="UfЫК"></a><h3>Официальный сайт QSP</h3>
 <p>
 <a href="https://qsp.org" style="text-decoration:none;" class="emFOLD">QSP.ORG</a>
 
 </p>
-<a id="rЕUП"></a><h3>Наша группа во Вконтакте</h3>
+<a id="CёDу"></a><h3>Наша группа во Вконтакте</h3>
 <p>
 https://vk.com/qsplayer
 
 </p>
-<a id="зoФв"></a><h3>Программы</h3>
+<a id="WЧzx"></a><h3>Программы</h3>
 <p>
 Основные репозитории QSP: https://github.com/QSPFoundation
 
 </p>
-<a id="HОБЙ"></a><h4>Плееры, редакторы, конвертеры, анализаторы</h4>
+<a id="Cъиr"></a><h4>Плееры, редакторы, конвертеры, анализаторы</h4>
 <p>
 ПРОГРАММЫ (не все, архив Aleks Versus): https://mega.nz/folder/jXwXlSRJ#TF7P-soOJOWIC8MrBA-L1A
 
@@ -108,8 +107,8 @@ GamConv
 Пакет для Sublime Text: билдер + подсветка синтаксиса.
 
 </p>
-<a id="ЭЫor"></a><h3>TXT2GAM | QSP2TXT | Converters</h3>
-<a id="unMх"></a><h4>Пакет qsp-конвертеров</h4>
+<a id="дbTи"></a><h3>TXT2GAM | QSP2TXT | Converters</h3>
+<a id="яЖSn"></a><h4>Пакет qsp-конвертеров</h4>
 <p>
 https://www.npmjs.com/package/@qsp/converters
 
@@ -118,7 +117,7 @@ https://www.npmjs.com/package/@qsp/converters
 Пакет для работы с текстовым и бинарным форматом qsp от Werewolf. Если кому-то захочется поиграться - там специально сделано что IO операции не часть пакета (чтобы его можно было в браузере(qspider) и в nodejs использовать), поэтому четние/запись файла нужно делать средствами nodejs.
 
 </p>
-<a id="MWAy"></a><h4>qsp -&gt; txt</h4>
+<a id="ЁXyщ"></a><h4>qsp -&gt; txt</h4>
 <p>
 Утилита <strong>Werewolf</strong>'а для конвертирования QSP-файла в текстовый файл формата TXT2GAM
 
@@ -127,7 +126,7 @@ https://www.npmjs.com/package/@qsp/converters
  https://codepen.io/srg-kostyrko/full/QWqdwxv
 
 </p>
-<a id="Gхжф"></a><h3>Плеер | Различные версии плееров | Players</h3>
+<a id="фЮзD"></a><h3>Плеер | Различные версии плееров | Players</h3>
 <p>
 На официальном сайте:
 
@@ -136,7 +135,7 @@ https://www.npmjs.com/package/@qsp/converters
 	<a href="https://qsp.org/index.php?option=com_content&view=article&id=64&Itemid=87" style="text-decoration:none;" class="emFOLD">https://qsp.org/index.php?option=com_content&amp;view=article&amp;id=64&amp;Itemid=87</a>
 
 </p>
-<a id="иVтP"></a><h3>Quest Player fork от SeedHartha для Android | Плеер для Андроид</h3>
+<a id="ыХтф"></a><h3>Quest Player fork от SeedHartha для Android | Плеер для Андроид</h3>
 <p>
 Репозиторий: https://github.com/seedhartha/QuestPlayer
 
@@ -145,12 +144,12 @@ https://www.npmjs.com/package/@qsp/converters
 Релизные версии: https://github.com/seedhartha/QuestPlayer/releases
 
 </p>
-<a id="вЦВй"></a><h3>Справка | Видеоуроки</h3>
+<a id="зЧCq"></a><h3>Справка | Видеоуроки</h3>
 <p>
 Видео-уроки и другая справочная информация в видеоформате по QSP: https://www.youtube.com/c/aleksversus
 
 </p>
-<a id="aрQщ"></a><h3>Справка | Справочник "Как сделать?"</h3>
+<a id="hОшю"></a><h3>Справка | Справочник "Как сделать?"</h3>
 <p>
 Онлайн-версия справочника по самым часто задаваемым вопросам из темы "Как сделать?" на форуме qsp.su: https://aleksversus.github.io/howdo_faq
 
@@ -159,7 +158,7 @@ https://www.npmjs.com/package/@qsp/converters
 Офлайн-версию справочника можно скачать здесь: https://github.com/AleksVersus/howdo_faq/releases
 
 </p>
-<a id="YэOD"></a><h3>Справка | wiki.qsp.org</h3>
+<a id="Kъюъ"></a><h3>Справка | wiki.qsp.org</h3>
 <p>
 Официальная справка: https://wiki.qsp.org
 
@@ -168,7 +167,7 @@ https://www.npmjs.com/package/@qsp/converters
 Резервная копия официальной справки на 20 июня 2022 года: https://mega.nz/folder/vG4XzSoZ#gf0jU0FFdWHpgJnN8eAaGA
 
 </p>
-<a id="ЩрId"></a><h3>Examples | Примеры</h3>
+<a id="mOjW"></a><h3>Examples | Примеры</h3>
 <p>
 Некоторые примеры: диалоги, как делать меню, календарь (время), работа с предметами, простые примеры, события по таймеру, шкалы и прогресс-бары
 
@@ -177,7 +176,7 @@ https://www.npmjs.com/package/@qsp/converters
 https://mega.nz/folder/rfAllKzR#rssaaJSs4tpGA_tUbaCCQw
 
 </p>
-<a id="bFxш"></a><h3>Игры</h3>
+<a id="eOZэ"></a><h3>Игры</h3>
 <p>
 Архив Крема (не только QSP-игры): https://db.crem.xyz/game
 
@@ -194,8 +193,8 @@ https://mega.nz/folder/rfAllKzR#rssaaJSs4tpGA_tUbaCCQw
 Игры на QSP. Не все, но многие. Архив Aleks Versus: https://mega.nz/folder/7XgTQKqT#P4q_86iTd0mZulCWw-Vq9w
 
 </p>
-<a id="uЭхr"></a><h4>Вереница миров, или Выводы из закона Мерфи</h4>
-<a id="ВAPу"></a><h4>Демка плеера qSpider</h4>
+<a id="UфfK"></a><h4>Вереница миров, или Выводы из закона Мерфи</h4>
+<a id="iшМy"></a><h4>Демка плеера qSpider</h4>
 <p>
 Сказочка на ночь, Куртуазная баллада, Город туманов
 
@@ -204,7 +203,7 @@ https://mega.nz/folder/rfAllKzR#rssaaJSs4tpGA_tUbaCCQw
 https://qspfoundation.github.io/qspider
 
 </p>
-<a id="pЬWl"></a><h3>qSpider | Плеер</h3>
+<a id="XYwt"></a><h3>qSpider | Плеер</h3>
 <p>
 Отличается от классического плеера возможностью полноценно работать с HTML, назначать горячие клавиши, размещать игру онлайн у себя на сайте и другими интересными плюшками.
 
@@ -217,7 +216,7 @@ https://qspfoundation.github.io/qspider
 Страница релизов нового плеера qSpider от Werewolf: https://github.com/QSPFoundation/qspider/releases
 
 </p>
-<a id="AЬжЯ"></a><h3>Темы и статьи с различными решениями на QSP</h3>
+<a id="щZDБ"></a><h3>Темы и статьи с различными решениями на QSP</h3>
 <ul>
 <li>
 <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=316&Itemid=57" style="text-decoration:none;" class="emFOLD">F.A.Q общие вопросы и некоторые примеры</a>
@@ -235,7 +234,7 @@ https://qspfoundation.github.io/qspider
 <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=348&Itemid=57" style="text-decoration:none;" class="emFOLD">Действие по условию</a>
 </li>
 </ul>
-<a id="UKвс"></a><h3>О лицензиях</h3>
+<a id="ЯиdЁ"></a><h3>О лицензиях</h3>
 <ul>
 <li>
 О лицензии OFL: <a href="http://ru.wikipedia.org/wiki/OFL" style="text-decoration:none;" class="emFOLD">http://ru.wikipedia.org/wiki/OFL</a>
@@ -247,7 +246,7 @@ https://qspfoundation.github.io/qspider
 <a href="https://qsp.org/index.php?option=com_agora&task=topic&id=398&Itemid=57" style="text-decoration:none;" class="emFOLD">Что такое Royalty-Free</a>
 </li>
 </ul>
-<a id="jсйU"></a><h3>Писательство</h3>
+<a id="ГэКЫ"></a><h3>Писательство</h3>
 <ul>
 <li>
 <a href="https://www.timuroki.ink/thewritingdead" style="text-decoration:none;" class="emFOLD">Пишите живее! Бесплатный курс по защите ваших текстов от словесной мертвечины</a>
@@ -256,7 +255,7 @@ https://qspfoundation.github.io/qspider
 <a href="https://web.archive.org/web/20161012025424/http://www.audag.org/?p=1521" style="text-decoration:none;" class="emFOLD">Семинар по общим вопросам. Стенограмма-2</a>
 </li>
 </ul>
-<a id="OLжS"></a><h3>Бесплатная графика для игр</h3>
+<a id="oХзT"></a><h3>Бесплатная графика для игр</h3>
 <ul>
 <li>
 <a href="https://color.adobe.com/ru/explore/most-popular/?time=month" style="text-decoration:none;" class="emFOLD">Подборка цветовой гаммы (палитры) для оформления. Огромное количество сочетаний цветов.</a>
@@ -300,7 +299,7 @@ https://qspfoundation.github.io/qspider
 </ul>
 </li>
 </ul>
-<a id="jЗvF"></a><h3>Бесплатные шрифты</h3>
+<a id="утCД"></a><h3>Бесплатные шрифты</h3>
 <ul>
 <li>
 Отличный сайт со свободными шрифтами: <a href="http://openfontlibrary.org" style="text-decoration:none;" class="emFOLD">http://openfontlibrary.org</a>
@@ -324,7 +323,7 @@ https://qspfoundation.github.io/qspider
 Топ моноширинных шрифтов <a href="https://freebiesupply.com/blog/top-monospace-fonts-for-developers" style="text-decoration:none;" class="emFOLD">https://freebiesupply.com/blog/top-mono … evelopers</a>
 </li>
 </ul>
-<a id="вofв"></a><h3>Бесплатные звуки и музыка для игр</h3>
+<a id="цUMы"></a><h3>Бесплатные звуки и музыка для игр</h3>
 <ul>
 <li>
 <a href="http://tunguskagrooves.com" style="text-decoration:none;" class="emFOLD">"Tunguska Electronic Music Society"</a> - мелодичная инструментальная и электронная музыка, лицензия CC.
@@ -360,7 +359,7 @@ AudioMicro - <a href="http://www.audiomicro.com/free-royalty-free-music" style="
 Бесплатные <a href="https://soundslibmp3.ru" style="text-decoration:none;" class="emFOLD">звуки</a> для видеомонтажа в самых популярных форматах wav, mp3, ogg.
 </li>
 </ul>
-<a id="Рдль"></a><h3>Платные Royalty-Free звуки и музыка для игр</h3>
+<a id="ФAвh"></a><h3>Платные Royalty-Free звуки и музыка для игр</h3>
 <p>
 В этой теме собираем ссылки на ресурсы, на которых есть платные звуки и музыка, которые можно легально использовать в своих играх, распространяемые по принципу Royalty-Free. Желательно давать краткое описание к ссылке.
 
@@ -414,10 +413,122 @@ AudioMicro - <a href="http://www.audiomicro.com/free-royalty-free-music" style="
     </div>
     <div id="soderzhanije_outer">
         <div class="soderzhanije">
-<a id="soderzhanije"></a><h2>Содержание</h2>
+<a id="informarch_soderzhanije"></a><h2>Содержание</h2>
+<a id="шlШm"></a><h3>Большой сборник полезных ссылок и закладок</h3>
 <ul>
 <li>
-
+<a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html#informarch_bookmarks" style="text-decoration:none;" class="emFOLD">Сборник ссылок и закладок по QSP</a>
+</li>
+</ul>
+<a id="дхdJ"></a><h3>Что такое QSP</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html#informarch_faq" style="text-decoration:none;" class="emFOLD">Список наиболее часто задаваемых вопросов и ответы на них</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/informatsija_o_qsp_0002.html#informarch_qspinfo" style="text-decoration:none;" class="emFOLD">Что такое QSP?</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/nash_put__0003.html#informarch_ourway" style="text-decoration:none;" class="emFOLD">Наш путь</a>
+</li>
+</ul>
+<a id="пХЮZ"></a><h3>Общие вопросы и решения</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html#informarch_qgen_teach" style="text-decoration:none;" class="emFOLD">Учебник по QSP для редактора QGen</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/lokalizatsija_qsp_0005.html#informarch_localization" style="text-decoration:none;" class="emFOLD">Локализация классического плеера версии 5.7.0</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/analizator_koda_qsp_0006.html#informarch_analyzer_qsp" style="text-decoration:none;" class="emFOLD">Анализатор кода</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/polka_igr_0007.html#informarch_gameshelf" style="text-decoration:none;" class="emFOLD">Полка игр</a>
+</li>
+</ul>
+<a id="ЯfЙЗ"></a><h3>Продвинутый QSP</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html#informarch_consoleplayer" style="text-decoration:none;" class="emFOLD">Простой консольный QSP-плеер</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/avtomatnoe_programmirovanie_0009.html#informarch_automateprogs" style="text-decoration:none;" class="emFOLD">Автоматное программирование в QSP</a>
+</li>
+</ul>
+<a id="тедД"></a><h3>Работа в текстовом редакторе</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM. Краткое руководство</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/rabota_v_tekstovom_redaktore_0011.html#informarch_game_in_texteditor" style="text-decoration:none;" class="emFOLD">Пишем QSP-игру в текстовом редакторе</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/preprotsessor_0012.html#informarch_txt2gam_preprocessor" style="text-decoration:none;" class="emFOLD">Использование препроцессора</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_for_linux_0013.html#informarch_forlinux" style="text-decoration:none;" class="emFOLD">TXT2GAM. Сборка для Linux</a>
+</li>
+</ul>
+<a id="ЦmHz"></a><h3>Вопросы по программированию</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианский дней</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/game_time_0015.html#informarch_gametime" style="text-decoration:none;" class="emFOLD">Игровое время (1.0)</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/gibkij_plejlist_0016.html#informarch_flexible_playlist" style="text-decoration:none;" class="emFOLD">Гибкий плейлист (1.0)</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/ispol_zovanie_massivov_0017.html#informarch_usethemassive" style="text-decoration:none;" class="emFOLD">Использование массивов</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/dopolnenie_inventarja_0018.html#informarch_ia_lib_ntropy" style="text-decoration:none;" class="emFOLD">Библиотечка дополняющая инвентарь 0.76</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/dejstvie_po_usloviju_0019.html#informarch_ifacts" style="text-decoration:none;" class="emFOLD">Действие по условию</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/plavnoe_izmenenie_0020.html#informarch_transformation" style="text-decoration:none;" class="emFOLD">Плавное изменение цвета фона (1.0)</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/otladchik_0021.html#informarch_debugger20" style="text-decoration:none;" class="emFOLD">Отладчик 2.0 beta</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html#informarch_randomizer" style="text-decoration:none;" class="emFOLD">Выбор случайных вариантов - тянем карты из колоды (1.0)</a>
+</li>
+</ul>
+<a id="IЦцж"></a><h3>Обновления плеера</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html#informarch_update570" style="text-decoration:none;" class="emFOLD">Обновление QSP (5.7.0) и QGen (4.0.0b)</a>
+</li>
+</ul>
+<a id="WхTl"></a><h3>Вопросы по AeroQSP</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html#informarch_aeroqsp_wtfit" style="text-decoration:none;" class="emFOLD">Общая информация по AeroQSP</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_instr_0025.html#informarch_aeroqsp_instr" style="text-decoration:none;" class="emFOLD">Инструкция по использованию AeroQSP совместно с Quest Generator</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_help_0026.html#informarch_aeroqsp_help" style="text-decoration:none;" class="emFOLD">Справка по AeroQSP (в дополнение к основной справке QSP)</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/standalone_aeroqsp_0027.html#informarch_standalone_aeroqsp" style="text-decoration:none;" class="emFOLD">Stand-alone сборка игр на AeroQSP</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_uchebnik_0028.html#informarch_aeroqspguide" style="text-decoration:none;" class="emFOLD">Учебник по AeroQSP и QGen</a>
+</li>
+</ul>
+<a id="pбuF"></a><h3>Обзоры игр</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html#informarch_compo10" style="text-decoration:none;" class="emFOLD">Обзоры игр с QSP-Compo 2010</a>
 </li>
 </ul>
         </div>
