--- a/informarch/otladchik_0021.html
+++ b/informarch/otladchik_0021.html
@@ -6,7 +6,6 @@
     <link type="text/css" rel="stylesheet" href="../res/css/easy.library.css" />
     <link type="text/css" rel="stylesheet" href="../res/css/offline.window.css" />
     <link type="text/css" rel="stylesheet" href="../res/css/qsp_code.css" />
-    <link type="text/css" rel="stylesheet" href="../res/css/qsp_code.css" />
     <title>QSP: ИнформАрхив</title>
 </head>
     
@@ -16,7 +15,7 @@
             <h1>ИнформАрхив QSP</h1>
             <!-- body start -->
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/plavnoe_izmenenie_0020.html" class="emHREFTT">&lt; Назад, к странице 20</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html" class="emHREFTT">Вперёд, к странице 22 &gt;</a></div></div>
-<a id="debugger20"></a><h2>Отладчик 2.0 beta</h2>
+<a id="informarch_debugger20"></a><h2>Отладчик 2.0 beta</h2>
 <p>
 Позволяет в любое время выполнить произвольный кусок кода или просмотреть значения переменных из указанного списка.
 
@@ -122,7 +121,7 @@
 У команд в фигурных скобках указаны обязательные параметры, а в круглых необязательные.
 
 </p>
-<a id="юоэЬ"></a><h4>Основные команды и настройки</h4>
+<a id="УэЦч"></a><h4>Основные команды и настройки</h4>
 <ul>
 <li>
 <span class="em_BLCK">debugger {0 | 1}</span> - Включение/отключение отладчика
@@ -137,7 +136,7 @@
 <span class="em_BLCK">help (название команды)</span> - список команд или информация об определенной команде
 </li>
 </ul>
-<a id="YqMП"></a><h4>Список переменных для вывода</h4>
+<a id="gKШT"></a><h4>Список переменных для вывода</h4>
 <ul>
 <li>
 <span class="em_BLCK">addVar {название переменной}</span> - добавление переменной в список отображения (можно указывать несколько переменных через пробел)
@@ -152,7 +151,7 @@
 <span class="em_BLCK">clearVars</span> - очистка списка переменных
 </li>
 </ul>
-<a id="ОDЖж"></a><h4>Список логических выражений для вывода</h4>
+<a id="ъAЮп"></a><h4>Список логических выражений для вывода</h4>
 <ul>
 <li>
 <span class="em_BLCK">addCond {название переменной}</span> - добавление логического выражения в список отображения
@@ -167,7 +166,7 @@
 <span class="em_BLCK">clearCond</span> - очистка списка логических выражений
 </li>
 </ul>
-<a id="ЫьшГ"></a><h4>Отладочный кусочек кода</h4>
+<a id="ЕoXЫ"></a><h4>Отладочный кусочек кода</h4>
 <ul>
 <li>
 <span class="em_BLCK">run (название переменной)</span> - Выполнение набраного кода(по умолчанию после выполнения код очищается) или кода из определенной переменной
@@ -194,7 +193,7 @@
 <span class="em_BLCK">insert {номер строки} {строка кода}</span> - вставка кода после определенной строки
 </li>
 </ul>
-<a id="БоJц"></a><h4>Сохранение и запись отладочного кода</h4>
+<a id="nкшш"></a><h4>Сохранение и запись отладочного кода</h4>
 <ul>
 <li>
 <span class="em_BLCK">save (название переменной)</span> - сохранение кода в переменную, если переменная не указана, выполняется автосохранение, по умолчанию автосохранение выполняется при каждом выполнении кода до его очистки
@@ -237,10 +236,122 @@
     </div>
     <div id="soderzhanije_outer">
         <div class="soderzhanije">
-<a id="soderzhanije"></a><h2>Содержание</h2>
+<a id="informarch_soderzhanije"></a><h2>Содержание</h2>
+<a id="шlШm"></a><h3>Большой сборник полезных ссылок и закладок</h3>
 <ul>
 <li>
-
+<a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html#informarch_bookmarks" style="text-decoration:none;" class="emFOLD">Сборник ссылок и закладок по QSP</a>
+</li>
+</ul>
+<a id="дхdJ"></a><h3>Что такое QSP</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html#informarch_faq" style="text-decoration:none;" class="emFOLD">Список наиболее часто задаваемых вопросов и ответы на них</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/informatsija_o_qsp_0002.html#informarch_qspinfo" style="text-decoration:none;" class="emFOLD">Что такое QSP?</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/nash_put__0003.html#informarch_ourway" style="text-decoration:none;" class="emFOLD">Наш путь</a>
+</li>
+</ul>
+<a id="пХЮZ"></a><h3>Общие вопросы и решения</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html#informarch_qgen_teach" style="text-decoration:none;" class="emFOLD">Учебник по QSP для редактора QGen</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/lokalizatsija_qsp_0005.html#informarch_localization" style="text-decoration:none;" class="emFOLD">Локализация классического плеера версии 5.7.0</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/analizator_koda_qsp_0006.html#informarch_analyzer_qsp" style="text-decoration:none;" class="emFOLD">Анализатор кода</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/polka_igr_0007.html#informarch_gameshelf" style="text-decoration:none;" class="emFOLD">Полка игр</a>
+</li>
+</ul>
+<a id="ЯfЙЗ"></a><h3>Продвинутый QSP</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html#informarch_consoleplayer" style="text-decoration:none;" class="emFOLD">Простой консольный QSP-плеер</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/avtomatnoe_programmirovanie_0009.html#informarch_automateprogs" style="text-decoration:none;" class="emFOLD">Автоматное программирование в QSP</a>
+</li>
+</ul>
+<a id="тедД"></a><h3>Работа в текстовом редакторе</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM. Краткое руководство</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/rabota_v_tekstovom_redaktore_0011.html#informarch_game_in_texteditor" style="text-decoration:none;" class="emFOLD">Пишем QSP-игру в текстовом редакторе</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/preprotsessor_0012.html#informarch_txt2gam_preprocessor" style="text-decoration:none;" class="emFOLD">Использование препроцессора</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_for_linux_0013.html#informarch_forlinux" style="text-decoration:none;" class="emFOLD">TXT2GAM. Сборка для Linux</a>
+</li>
+</ul>
+<a id="ЦmHz"></a><h3>Вопросы по программированию</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианский дней</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/game_time_0015.html#informarch_gametime" style="text-decoration:none;" class="emFOLD">Игровое время (1.0)</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/gibkij_plejlist_0016.html#informarch_flexible_playlist" style="text-decoration:none;" class="emFOLD">Гибкий плейлист (1.0)</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/ispol_zovanie_massivov_0017.html#informarch_usethemassive" style="text-decoration:none;" class="emFOLD">Использование массивов</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/dopolnenie_inventarja_0018.html#informarch_ia_lib_ntropy" style="text-decoration:none;" class="emFOLD">Библиотечка дополняющая инвентарь 0.76</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/dejstvie_po_usloviju_0019.html#informarch_ifacts" style="text-decoration:none;" class="emFOLD">Действие по условию</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/plavnoe_izmenenie_0020.html#informarch_transformation" style="text-decoration:none;" class="emFOLD">Плавное изменение цвета фона (1.0)</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/otladchik_0021.html#informarch_debugger20" style="text-decoration:none;" class="emFOLD">Отладчик 2.0 beta</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html#informarch_randomizer" style="text-decoration:none;" class="emFOLD">Выбор случайных вариантов - тянем карты из колоды (1.0)</a>
+</li>
+</ul>
+<a id="IЦцж"></a><h3>Обновления плеера</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html#informarch_update570" style="text-decoration:none;" class="emFOLD">Обновление QSP (5.7.0) и QGen (4.0.0b)</a>
+</li>
+</ul>
+<a id="WхTl"></a><h3>Вопросы по AeroQSP</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html#informarch_aeroqsp_wtfit" style="text-decoration:none;" class="emFOLD">Общая информация по AeroQSP</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_instr_0025.html#informarch_aeroqsp_instr" style="text-decoration:none;" class="emFOLD">Инструкция по использованию AeroQSP совместно с Quest Generator</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_help_0026.html#informarch_aeroqsp_help" style="text-decoration:none;" class="emFOLD">Справка по AeroQSP (в дополнение к основной справке QSP)</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/standalone_aeroqsp_0027.html#informarch_standalone_aeroqsp" style="text-decoration:none;" class="emFOLD">Stand-alone сборка игр на AeroQSP</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_uchebnik_0028.html#informarch_aeroqspguide" style="text-decoration:none;" class="emFOLD">Учебник по AeroQSP и QGen</a>
+</li>
+</ul>
+<a id="pбuF"></a><h3>Обзоры игр</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html#informarch_compo10" style="text-decoration:none;" class="emFOLD">Обзоры игр с QSP-Compo 2010</a>
 </li>
 </ul>
         </div>
