--- a/informarch/rabota_v_tekstovom_redaktore_0011.html
+++ b/informarch/rabota_v_tekstovom_redaktore_0011.html
@@ -6,7 +6,6 @@
     <link type="text/css" rel="stylesheet" href="../res/css/easy.library.css" />
     <link type="text/css" rel="stylesheet" href="../res/css/offline.window.css" />
     <link type="text/css" rel="stylesheet" href="../res/css/qsp_code.css" />
-    <link type="text/css" rel="stylesheet" href="../res/css/qsp_code.css" />
     <title>QSP: ИнформАрхив</title>
 </head>
     
@@ -16,9 +15,9 @@
             <h1>ИнформАрхив QSP</h1>
             <!-- body start -->
 <div style="display:flex;justify-content:space-between;"><div><a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html" class="emHREFTT">&lt; Назад, к странице 10</a></div><div><a href="https://aleksversus.github.io/howdo_faq/informarch/preprotsessor_0012.html" class="emHREFTT">Вперёд, к странице 12 &gt;</a></div></div>
-<a id="game_in_texteditor"></a><h2>Пишем QSP-игру в текстовом редакторе</h2>
+<a id="informarch_game_in_texteditor"></a><h2>Пишем QSP-игру в текстовом редакторе</h2>
 <p>
-Для того, чтобы написать свой текстовый квест, понадобится любой текстовый редактор и программа <a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM</a>. Для более удобного использования этой программы существует специальная оболочка <a href="https://qsp.org/index.php?option=com_content&task=view&id=53&Itemid=56" style="text-decoration:none;" class="emFOLD">GAMConv</a>, которой можно пользоваться для конвертирования кода уроков. Для проигрывания квеста понадобится <a href="https://qsp.org/index.php?option=com_content&view=article&id=64&Itemid=56" style="text-decoration:none;" class="emFOLD">QSP-плеер</a>.
+Для того, чтобы написать свой текстовый квест, понадобится любой текстовый редактор и программа <a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM</a>. Для более удобного использования этой программы существует специальная оболочка <a href="https://qsp.org/index.php?option=com_content&task=view&id=53&Itemid=56" style="text-decoration:none;" class="emFOLD">GAMConv</a>, которой можно пользоваться для конвертирования кода уроков. Для проигрывания квеста понадобится <a href="https://qsp.org/index.php?option=com_content&view=article&id=64&Itemid=56" style="text-decoration:none;" class="emFOLD">QSP-плеер</a>.
 
 </p>
 <p>
@@ -34,7 +33,7 @@
 
 
 </div>
-<a id="YEZm"></a><h3>Урок 1. Локации, Действия, Переходы</h3>
+<a id="HIЬЖ"></a><h3>Урок 1. Локации, Действия, Переходы</h3>
 <p>
 Текстовый квест в QSP состоит из отдельных локаций (кадров, сцен, эпизодов), на которых могут выполняться различные игровые действия. Каждая локация имеет начало (тут же указывается имя локации), код локации (середину) и конец (знак «-», минус).
 
@@ -120,7 +119,7 @@
 Это основа всех квестов на QSP. Дальше мы попробуем не спеша сделать небольшой квест, в каждом новом уроке добавляя ему новые элементы, пока не охватим все возможности QSP.
 
 </p>
-<a id="ФRчФ"></a><h3>Урок 2. Переменные, Условия</h3>
+<a id="MФгA"></a><h3>Урок 2. Переменные, Условия</h3>
 <p>
 Пусть у нас будет игра из трёх локаций. В одной локации игрок сможет зарабатывать деньги, в другой - тратить их на различные предметы, в третьей - дарить эти предметы различным людям. К этим трём добавим ещё одну, стартовую, локацию, в которой будет объясняться задача игрока.
 
@@ -236,7 +235,7 @@
 Отконвертируйте и запустите пример, теперь игрок сможет зарабатывать деньги переноской ящиков.
 
 </p>
-<a id="чбПA"></a><h3>Урок 3. Инвентарь</h3>
+<a id="чmlV"></a><h3>Урок 3. Инвентарь</h3>
 <p>
 Теперь добавим игроку возможность покупать различные предметы в магазине и затем дарить. Для предметов очень хорошо подходит «Инвентарь». Теперь купленные предметы игрок сможет носить с собой и дарить своим близким, когда захочет.
 
@@ -419,7 +418,7 @@
 Конструкция <span class="em_BLCK"><span class="emOPRT">IF</span><span class="emFUNC"> OBJ</span> 'имя_предмета'</span> проверяет, есть ли у игрока в инвентаре указанный предмет. В нашем случае мы проверяем наличие тех предметов, которые мы можем купить в магазине. И если у игрока есть такие предметы - создаём действие «дарения» этих предметов. Когда игрок совершит действие, мы заберем у него тот предмет, который он хочет подарить и выводим диалог благодарности за подарок. К тому же, мы используем команду <span class="em_BLCK"><span class="emOPRT">DELACT</span></span>, которой удаляем действие, указанное после этой команды.
 
 </p>
-<a id="НxLH"></a><h3>Урок 4. Настройки, Форматирование</h3>
+<a id="бЬЦИ"></a><h3>Урок 4. Настройки, Форматирование</h3>
 <p>
 В этом уроке рассмотрим, как сделать наш квест более привлекательным. В первую очередь следует настроить интерфейс так, чтобы в нём не оставалось ничего лишнего, отвлекающего от игры. Если вы сейчас запустите наш пример, то увидите, что мы не используем "поле дополнительного описания" (справа внизу) и "командную строку" (внизу). Чтобы они нам не мешали, их нужно отключить. Делается это следующим образом:
 
@@ -621,10 +620,122 @@
     </div>
     <div id="soderzhanije_outer">
         <div class="soderzhanije">
-<a id="soderzhanije"></a><h2>Содержание</h2>
+<a id="informarch_soderzhanije"></a><h2>Содержание</h2>
+<a id="шlШm"></a><h3>Большой сборник полезных ссылок и закладок</h3>
 <ul>
 <li>
-
+<a href="https://aleksversus.github.io/howdo_faq/informarch/zakladki_0030.html#informarch_bookmarks" style="text-decoration:none;" class="emFOLD">Сборник ссылок и закладок по QSP</a>
+</li>
+</ul>
+<a id="дхdJ"></a><h3>Что такое QSP</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/faq_po_qsp_0001.html#informarch_faq" style="text-decoration:none;" class="emFOLD">Список наиболее часто задаваемых вопросов и ответы на них</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/informatsija_o_qsp_0002.html#informarch_qspinfo" style="text-decoration:none;" class="emFOLD">Что такое QSP?</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/nash_put__0003.html#informarch_ourway" style="text-decoration:none;" class="emFOLD">Наш путь</a>
+</li>
+</ul>
+<a id="пХЮZ"></a><h3>Общие вопросы и решения</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/uchebnik_po_qsp_dlja_redaktora_qgen_0004.html#informarch_qgen_teach" style="text-decoration:none;" class="emFOLD">Учебник по QSP для редактора QGen</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/lokalizatsija_qsp_0005.html#informarch_localization" style="text-decoration:none;" class="emFOLD">Локализация классического плеера версии 5.7.0</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/analizator_koda_qsp_0006.html#informarch_analyzer_qsp" style="text-decoration:none;" class="emFOLD">Анализатор кода</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/polka_igr_0007.html#informarch_gameshelf" style="text-decoration:none;" class="emFOLD">Полка игр</a>
+</li>
+</ul>
+<a id="ЯfЙЗ"></a><h3>Продвинутый QSP</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/konsol_nyj_qsp-pleer_0008.html#informarch_consoleplayer" style="text-decoration:none;" class="emFOLD">Простой консольный QSP-плеер</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/avtomatnoe_programmirovanie_0009.html#informarch_automateprogs" style="text-decoration:none;" class="emFOLD">Автоматное программирование в QSP</a>
+</li>
+</ul>
+<a id="тедД"></a><h3>Работа в текстовом редакторе</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_help_0010.html#informarch_txt2gam_manual" style="text-decoration:none;" class="emFOLD">TXT2GAM. Краткое руководство</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/rabota_v_tekstovom_redaktore_0011.html#informarch_game_in_texteditor" style="text-decoration:none;" class="emFOLD">Пишем QSP-игру в текстовом редакторе</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/preprotsessor_0012.html#informarch_txt2gam_preprocessor" style="text-decoration:none;" class="emFOLD">Использование препроцессора</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/txt2gam_for_linux_0013.html#informarch_forlinux" style="text-decoration:none;" class="emFOLD">TXT2GAM. Сборка для Linux</a>
+</li>
+</ul>
+<a id="ЦmHz"></a><h3>Вопросы по программированию</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/kalendar__po_metodu_schiota_julianskih_dnej_0014.html#informarch_calend_jul" style="text-decoration:none;" class="emFOLD">Календарь по методу счёта Юлианский дней</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/game_time_0015.html#informarch_gametime" style="text-decoration:none;" class="emFOLD">Игровое время (1.0)</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/gibkij_plejlist_0016.html#informarch_flexible_playlist" style="text-decoration:none;" class="emFOLD">Гибкий плейлист (1.0)</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/ispol_zovanie_massivov_0017.html#informarch_usethemassive" style="text-decoration:none;" class="emFOLD">Использование массивов</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/dopolnenie_inventarja_0018.html#informarch_ia_lib_ntropy" style="text-decoration:none;" class="emFOLD">Библиотечка дополняющая инвентарь 0.76</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/dejstvie_po_usloviju_0019.html#informarch_ifacts" style="text-decoration:none;" class="emFOLD">Действие по условию</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/plavnoe_izmenenie_0020.html#informarch_transformation" style="text-decoration:none;" class="emFOLD">Плавное изменение цвета фона (1.0)</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/otladchik_0021.html#informarch_debugger20" style="text-decoration:none;" class="emFOLD">Отладчик 2.0 beta</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/tjanem_karty_iz_kollody_0022.html#informarch_randomizer" style="text-decoration:none;" class="emFOLD">Выбор случайных вариантов - тянем карты из колоды (1.0)</a>
+</li>
+</ul>
+<a id="IЦцж"></a><h3>Обновления плеера</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/obnovlenie_do_5.7.0_0023.html#informarch_update570" style="text-decoration:none;" class="emFOLD">Обновление QSP (5.7.0) и QGen (4.0.0b)</a>
+</li>
+</ul>
+<a id="WхTl"></a><h3>Вопросы по AeroQSP</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_0024.html#informarch_aeroqsp_wtfit" style="text-decoration:none;" class="emFOLD">Общая информация по AeroQSP</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_instr_0025.html#informarch_aeroqsp_instr" style="text-decoration:none;" class="emFOLD">Инструкция по использованию AeroQSP совместно с Quest Generator</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_help_0026.html#informarch_aeroqsp_help" style="text-decoration:none;" class="emFOLD">Справка по AeroQSP (в дополнение к основной справке QSP)</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/standalone_aeroqsp_0027.html#informarch_standalone_aeroqsp" style="text-decoration:none;" class="emFOLD">Stand-alone сборка игр на AeroQSP</a>
+</li>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/aeroqsp_uchebnik_0028.html#informarch_aeroqspguide" style="text-decoration:none;" class="emFOLD">Учебник по AeroQSP и QGen</a>
+</li>
+</ul>
+<a id="pбuF"></a><h3>Обзоры игр</h3>
+<ul>
+<li>
+<a href="https://aleksversus.github.io/howdo_faq/informarch/obzory_qsp-compo_2010_0029.html#informarch_compo10" style="text-decoration:none;" class="emFOLD">Обзоры игр с QSP-Compo 2010</a>
 </li>
 </ul>
         </div>
