добавил ссылку на раздел информархив

--- a/index.html
+++ b/index.html
@@ -89,7 +89,14 @@
                         </li>
                     </ul>
             <h6><span class="Monokai-Func">Информ-Архив QSP:</span></h6>
-                <span class="Monokai-Comment">! данный раздел ещё прорабатывается, но скоро будет доступен.<br/>! Он будет содержать устаревшие статьи, которые пока ещё существуют и на QSP.org,<br/>! но в скором времени могут быть удалены оттуда.</span>
+                <span class="Monokai-Comment">! устаревшие статьи, которые пока ещё существуют и на QSP.org,<br/>! но в скором времени могут быть удалены оттуда.</span>
+                <ul class="cmd">
+                        <li>
+                            <a href="https://aleksversus.github.io/howdo_faq/informarch/soderzhanie_0000.html" style="text-decoration: none;">
+                                <span class="Monokai-Operator">jump</span> <span class="Monokai-String">"Содержание раздела"</span>
+                            </a>
+                        </li>
+                    </ul>
  
             
             <h6><span class="Monokai-Func">Мои ресурсы:</span></h6>
